--- a/_config.yml
+++ b/_config.yml
@@ -80,14 +80,14 @@ analytics:
 
 # Site Author
 author:
-  name             : "Qishen (Sam) Liang"
+  name             : "Qishen Liang"
   avatar           : "profile.png"
   bio              : "Computer Science MS student at USC, specialized in Computer Networks"
   location         : "Los Angeles, California"
   employer         :
   pubmed           : 
   googlescholar    : 
-  email            :
+  email            : "qishenl@usc.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :  "https://www.linkedin.com/in/qishen-sam-liang/"
+  linkedin         :  "qishen-sam-liang"
   orcid            : 
   pinterest        :
   soundcloud       :
