trying to add readings, added profile photo

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Qishen Liang"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Computer Science MS student at USC, specialized in Computer Networks"
   location         : "Los Angeles, California"
   employer         :
