test for projects

--- a/_config.yml
+++ b/_config.yml
@@ -231,14 +231,14 @@ defaults:
       share: true
       comments: true
   # _readings
-  - scope:
-      path: ""
-      type: readings
-    values:
-      layout: single
-      author_profile: false
-      share: true
-      comments: true
+  # - scope:
+  #     path: ""
+  #     type: readings
+  #   values:
+  #     layout: single
+  #     author_profile: false
+  #     share: true
+  #     comments: true
   # _portfolio
   - scope:
       path: ""
